--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "url": "https://raw.github.com/janl/mustache.js/{version}/mustache.js"
   },
   "scripts": {
-    "build": "cp mustache.js mustache.mjs && rollup mustache.mjs --file mustache.js --format umd --name Mustache && uglifyjs mustache.js > mustache.min.js",
+    "build": "rollup mustache.mjs --file mustache.js --format umd --name Mustache && uglifyjs mustache.js > mustache.min.js",
     "test": "npm run test-lint && npm run test-unit",
     "test-lint": "eslint mustache.js bin/mustache test/*.js test/**/*.js",
     "test-unit": "mocha --reporter spec test/*-test.js",
@@ -46,7 +46,7 @@
     "test-browser": "npm run pre-test-browser && zuul -- test/context-test.js test/parse-test.js test/scanner-test.js test/render-test-browser.js",
     "test-browser-local": "npm run pre-test-browser && zuul --local 8080 -- test/context-test.js test/scanner-test.js test/parse-test.js test/render-test-browser.js",
     "postversion": "scripts/bump-version-in-source",
-    "prepublishOnly": "npm run build"
+    "prepack": "npm run build"
   },
   "devDependencies": {
     "chai": "^3.4.0",
